[package]
name = "pdf_generator"
version = "0.1.0"
authors = ["CozyDoomer <chr.unterrainer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dicom = "0.3"

printpdf = { git = "https://github.com/fschutt/printpdf.git" }

image = "0.23.0"
quicli = "0.4.0"
structopt = "0.3.9"
rusttype = "0.8.2"
rand = "0.7.3"
glob = "0.3.0"
scan_dir = "0.3.3"
